--- a/pages/2tmw1.html
+++ b/pages/2tmw1.html
@@ -34,8 +34,10 @@
     </ul>
     <!-- main -->
     <main>
+
+      <!-- Tabs -->
       <div class="row">
-        <div class="col s12">
+        <div class="col s12 m6">
           <ul class="tabs">
             <li class="tab col s3"><a class="active" href="#test1">Lun</a></li>
             <li class="tab col s3"><a href="#test2">Mar</a></li>
@@ -47,6 +49,8 @@
         </div>
         
       </div>
+
+      <!-- Background -->
     </main>
      <!-- sidenav init -->
      <script src="../js/lib/materialize.min.js"></script>
