--- a/pages/2tmw2.html
+++ b/pages/2tmw2.html
@@ -32,7 +32,27 @@
     <li><a class="waves-effect" href="2tmw1.html">2tmw1</a></li>
     <li><a class="waves-effect" href="2tmw2.html">2tmw2</a></li>
   </ul>
+  <main>
+    <!-- Tabs -->
+    <div class="row">
+      <div class="col s12 m6">
+        <ul class="tabs">
+          <li class="tab col s3"><a class="active" href="#test1">Lun</a></li>
+          <li class="tab col s3"><a href="#test2">Mar</a></li>
+          <li class="tab col s3"><a href="#test3">Mer</a></li>
+          <li class="tab col s3"><a href="#test4">Jeu</a></li>
+          <li class="tab col s3"><a href="#test5">Ven</a></li>
+          <li class="tab col s3"><a href="#test6">Sam</a></li>
+        </ul>
+      </div>
+    
+    </div>
 
+
+
+
+
+  </main>
      <!-- sidenav init -->
      <script src="../js/lib/materialize.min.js"></script>
      <script src="../js/ui.js"></script>
